Fixed brand images on mobile

--- a/gardeners/static-assets/css/style.css
+++ b/gardeners/static-assets/css/style.css
@@ -1205,6 +1205,13 @@ work Section style
     height: 80px;
 }
 
+.brand_image {
+    height: 80px;
+    width: auto;
+    margin: auto;
+    object-fit: contain;
+}
+
 
 /*Test Section
 ======================*/
